--- a/.gitignore
+++ b/.gitignore
@@ -6,34 +6,35 @@
 *.opendb
 *.VC.db
 *.log
-bin/
-bin32/
-TinyOAL/TinyOAL.aps
-TinyOAL/x64/
-TinyOAL/Win32/
-TinyOAL_Net/x64/
-TinyOAL_Net/Win32/
-examples/00Testbed/x64/
-examples/00Testbed/Win32/
-examples/00Testbed/out.wav
-examples/00Testbed/TinyOAL.txt
-examples/01WavFile/x64/
-examples/01WavFile/Win32/
-examples/02OggFile/x64/
-examples/02OggFile/Win32/
-examples/03Properties/x64/
-examples/03Properties/Win32/
-examples/04Mp3File/x64/
-examples/04Mp3File/Win32/
-examples/05FlacFile/x64/
-examples/05FlacFile/Win32/
-examples/06Managed/bin/
-examples/06Managed/obj/
-examples/07M4AFile/x64/
-examples/07M4AFile/Win32/
-examples/LoopUtility/x64/
-examples/LoopUtility/Win32/
-media/
-!media/license.txt
-examples/loopexample.zip
-.vs/
+/bin/
+/bin32/
+/TinyOAL/TinyOAL.aps
+/TinyOAL/x64/
+/TinyOAL/Win32/
+/TinyOAL_Net/x64/
+/TinyOAL_Net/Win32/
+/examples/00Testbed/x64/
+/examples/00Testbed/Win32/
+/examples/00Testbed/out.wav
+/examples/00Testbed/TinyOAL.txt
+/examples/01WavFile/x64/
+/examples/01WavFile/Win32/
+/examples/02OggFile/x64/
+/examples/02OggFile/Win32/
+/examples/03Properties/x64/
+/examples/03Properties/Win32/
+/examples/04Mp3File/x64/
+/examples/04Mp3File/Win32/
+/examples/05FlacFile/x64/
+/examples/05FlacFile/Win32/
+/examples/06Managed/bin/
+/examples/06Managed/obj/
+/examples/07M4AFile/x64/
+/examples/07M4AFile/Win32/
+/examples/LoopUtility/x64/
+/examples/LoopUtility/Win32/
+/examples/bin/
+/media/
+/!media/license.txt
+/examples/loopexample.zip
+/.vs/
