--- a/examples/02OggFile/02OggFile.vcxproj
+++ b/examples/02OggFile/02OggFile.vcxproj
@@ -23,6 +23,7 @@
     <RootNamespace>My02OggFile</RootNamespace>
     <Keyword>Win32Proj</Keyword>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <VcpkgAutoLink>false</VcpkgAutoLink>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
