--- a/examples/07M4AFile/07M4AFile.vcxproj
+++ b/examples/07M4AFile/07M4AFile.vcxproj
@@ -183,11 +183,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="cAudioResourceM4A.cpp" />
+    <ClCompile Include="AudioResourceM4A.cpp" />
     <ClCompile Include="example.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="cAudioResourceM4A.h" />
+    <ClInclude Include="AudioResourceM4A.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
