--- a/TinyOAL/TinyOAL.vcxproj.filters
+++ b/TinyOAL/TinyOAL.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="..\include\tinyoal\TinyOAL.h">
       <Filter>include</Filter>
     </ClInclude>
+    <ClInclude Include="loadoal.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LoadOAL.cpp">
